--- a/SoftwareLocacao/src/main/resources/application.properties
+++ b/SoftwareLocacao/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.output.ansi.enabled=ALWAYS
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/voceAluga?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=1234567890
+spring.datasource.password=977897
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
