--- a/SoftwareLocacao/pom.xml
+++ b/SoftwareLocacao/pom.xml
@@ -48,7 +48,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-el</artifactId>
+            <version>10.1.15</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
