--- a/SoftwareLocacao/pom.xml
+++ b/SoftwareLocacao/pom.xml
@@ -53,7 +53,22 @@
             <artifactId>tomcat-embed-el</artifactId>
             <version>10.1.15</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.orm</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>6.2.13.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.0.Alpha1</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
