--- a/SoftwareLocacao/pom.xml
+++ b/SoftwareLocacao/pom.xml
@@ -68,6 +68,11 @@
 			<artifactId>validation-api</artifactId>
 			<version>2.0.0.Alpha1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.33</version>
+		</dependency>
 	</dependencies>
 
 	<build>
